--- a/main.html
+++ b/main.html
@@ -4,10 +4,110 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+        /* Basic Table Styling */
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+
+        th, td {
+            border: 1px solid orange;
+            padding: 3px 5px;
+            text-align: center;
+        }
+
+        th {
+            background-color: #888888;
+            color: white;
+        }
+
+        /* Subtotal row styling */
+        .sub-total-text {
+            text-align: right;
+            font-weight: bold;
+        }
+    </style>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table>
+		<thead>
+			<tr>
+				<th>Firm</th>
+				<th>Org</th>
+				<th>Lob</th>
+				<th>sub Lob</th>
+				<th>Business Plans</th>
+				<th>Business Components</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td rowspan="11">XYZ</td>
+                <td rowspan="5">CST</td>
+                <td rowspan="3">CT</td>
+                <td>ADS</td>
+                <td>1</td>
+                <td>10</td>
+			</tr>
+			<tr>
+                <td>BTO</td>
+                <td>2</td>
+                <td>15</td>
+            </tr>
+			<tr>
+                <td>CSI</td>
+                <td>3</td>
+                <td>6</td>
+            </tr>
+            <tr>
+                <td rowspan="2">VCT</td>
+                <td>ADS</td>
+                <td>4</td>
+                <td>10</td>
+            </tr>
+			<tr>
+                <td>BTO</td>
+                <td>5</td>
+                <td>15</td>
+            </tr>
+			<tr>
+                <td colspan="3" class="sub-total-text">Sub Total</td>
+                <td>6</td>
+                <td>15</td>
+            </tr>
+            <tr>
+                <td rowspan="4">CST</td>
+                <td rowspan="3">CT</td>
+                <td>ADS</td>
+                <td>7</td>
+                <td>10</td>
+            </tr>
+			<tr>
+                <td>BTO</td>
+                <td>8</td>
+                <td>15</td>
+            </tr>
+            <tr>
+                <td>CSI</td>
+                <td>9</td>
+                <td>6</td>
+            </tr>
+            <tr>
+                <td rowspan="1">VCT</td>
+                <td>ADS</td>
+                <td>10</td>
+                <td>10</td>
+            </tr>
+			<tr>
+                <td colspan="3" class="sub-total-text">Sub Total</td>
+                <td>11</td>
+                <td>15</td>
+            </tr>
+		</tbody>
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
