--- a/main.html
+++ b/main.html
@@ -9,6 +9,9 @@
         table {
             width: 100%;
             border-collapse: collapse;
+			border: 1px solid orange;
+            border-collapse: collapse; /* Ensure borders are collapsed so no gaps appear */
+            border-width: 0px 0px 1px 1px;
         }
 
         th, td {
@@ -38,7 +41,7 @@
 				<th>Firm</th>
 				<th>Org</th>
 				<th>Lob</th>
-				<th>sub Lob</th>
+				<th>Sub Lob</th>
 				<th>Business Plans</th>
 				<th>Business Components</th>
 			</tr>
@@ -73,7 +76,7 @@
                 <td>5</td>
                 <td>15</td>
             </tr>
-			<tr>
+			<tr class="sub-total-row">
                 <td colspan="3" class="sub-total-text">Sub Total</td>
                 <td>6</td>
                 <td>15</td>
@@ -101,7 +104,7 @@
                 <td>10</td>
                 <td>10</td>
             </tr>
-			<tr>
+			<tr class="sub-total-row">
                 <td colspan="3" class="sub-total-text">Sub Total</td>
                 <td>11</td>
                 <td>15</td>
