--- a/main.html
+++ b/main.html
@@ -23,6 +23,12 @@
         th {
             background-color: #888888;
             color: white;
+			border-top-width: 1px;    /* Top border */
+    border-right-width: 1px;  /* Right border */
+    border-bottom-width: 0px; /* Bottom border */
+    border-left-width: 0px;   /* Left border */
+    border-style: solid;      /* Ensure borders are solid */
+    border-color: orange;
         }
 
         /* Subtotal row styling */
